Adds current/total time in the progress display

--- a/interfaces/default/templates/index.tmpl
+++ b/interfaces/default/templates/index.tmpl
@@ -30,8 +30,9 @@
                     <label for="shuffle-button">Shuffle</label>
                     <input id="shuffle-button" type="checkbox">
                 </div>
-                <div>
+                <div id="progress">
                     <div id="progress-bar"></div>
+                    <div id="play-time"><span id="play-time-current">0:00</span><span id="play-time-total">0:00</span></div>
                 </div>
                 <table id="now-playing">
                     <tbody>
