--- a/interfaces/default/templates/static/css/main.css
+++ b/interfaces/default/templates/static/css/main.css
@@ -98,7 +98,7 @@ body {
     margin: 0 6px 0 6px;
     width: 32px;
     height: 32px;
-    background: url('../images/sprite.png') -224px 0 no-repeat;
+    background: url('../images/cover.png') no-repeat;
     cursor: pointer;
 }
 
