Use CDN for jQuery

--- a/interfaces/default/templates/index.tmpl
+++ b/interfaces/default/templates/index.tmpl
@@ -5,11 +5,10 @@
         <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
         <link type="text/css" rel="stylesheet" href="./static/css/main.css">
         <link type="text/css" rel="stylesheet" href="http://jqueryui.com/themes/base/jquery.ui.all.css" />
-        <script type="text/javascript" src="./static/js/jquery-1.4.2.min.js"></script>
+        <script type="text/javascript" src="http://code.jquery.com/jquery-1.4.2.min.js"></script>
         <script type="text/javascript" src="./static/js/jquery.layout.min-1.2.0.js"></script>
         <script type="text/javascript" src="./static/js/jquery.jplayer.min.js"></script>
         <script type="text/javascript" src="./static/js/jquery-ui-1.8.2.custom.min.js"></script>
-        <script type="text/javascript" src="./static/js/jquery.pngFix.pack.js"></script>
         <script type="text/javascript" src="./static/js/blofeld.js"></script>
         <script type="text/javascript" src="http://jqueryui.com/themeroller/themeswitchertool/"></script>
         <link type="image/x-icon" rel="shortcut icon" href="./static/images/favicon.ico">
