Use some more efficient CSS selectors

--- a/interfaces/default/templates/list_songs.tmpl
+++ b/interfaces/default/templates/list_songs.tmpl
@@ -1,7 +1,7 @@
                 <div class="scrolling-container">
                     <table id="songs">
                         <thead class="ui-widget-header ui-corner-all">
-                            <tr class="">
+                            <tr class="song">
                                 <th class="status ui-corner-left"></th>
                                 <th class="track-number">#</th>
                                 <th class="title">Title</th>
