Fix up the cover art dialog
Fix for proper sizing and placement, which was a bit wonky before.

--- a/interfaces/default/templates/static/css/main.css
+++ b/interfaces/default/templates/static/css/main.css
@@ -223,9 +223,10 @@ tr.artist, tr.album, tr.song {
     cursor: w-resize;
 }
 
-#cover-art-dialog div {
-    text-align: center;
-    vertical-align: middle;
+#cover-art-dialog {
+    margin: 0;
+    padding: 1em;
+    overflow: hidden;
 }
 
 #play-time-total {
