Use jQuery.address plugin for state tracking

--- a/interfaces/default/templates/index.tmpl
+++ b/interfaces/default/templates/index.tmpl
@@ -9,6 +9,7 @@
         <script type="text/javascript" src="./static/js/jquery.layout.min-1.2.0.js"></script>
         <script type="text/javascript" src="./static/js/jquery.jplayer.min.js"></script>
         <script type="text/javascript" src="./static/js/jquery-ui-1.8.2.custom.min.js"></script>
+        <script type="text/javascript" src="./static/js/jquery.address-1.3.min.js"></script>
         <script type="text/javascript" src="./static/js/blofeld.js"></script>
         <script type="text/javascript" src="http://jqueryui.com/themeroller/themeswitchertool/"></script>
         <link type="image/x-icon" rel="shortcut icon" href="./static/images/favicon.ico">
