--- a/interfaces/default/templates/index.tmpl
+++ b/interfaces/default/templates/index.tmpl
@@ -4,11 +4,12 @@
         <title>Blofeld</title>
         <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
         <link type="text/css" rel="stylesheet" href="./static/css/main.css">
+        <link type="text/css" rel="stylesheet" href="./static/css/smoothness/jquery-ui-1.8.5.custom.css" />
         <link type="text/css" rel="stylesheet" href="http://jqueryui.com/themes/base/jquery.ui.all.css" />
         <script type="text/javascript" src="http://code.jquery.com/jquery-1.4.2.min.js"></script>
         <script type="text/javascript" src="./static/js/jquery.layout.min-1.2.0.js"></script>
         <script type="text/javascript" src="./static/js/jquery.jplayer.min.js"></script>
-        <script type="text/javascript" src="./static/js/jquery-ui-1.8.2.custom.min.js"></script>
+        <script type="text/javascript" src="./static/js/jquery-ui-1.8.5.custom.min.js"></script>
         <script type="text/javascript" src="./static/js/jquery.address-1.3.min.js"></script>
         <script type="text/javascript" src="./static/js/blofeld.js"></script>
         <script type="text/javascript" src="http://jqueryui.com/themeroller/themeswitchertool/"></script>
@@ -75,26 +76,20 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td class="ui-corner-all" id="bitrate-container">
+                            <tr><td>
+                                <div id="bitrate-container" class="option">
                                     <div id="bitrate-slider"></div>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="ui-corner-all">
+                                </div>
+                                <div class="option">
                                     <span id="amount">320</span>kbps
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="ui-corner-all">
+                                </div>
+                                <div class="option">
                                     <button id="download-button">Download</button>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="ui-corner-all">
+                                </div>
+                                <div class="option">
                                     <div id="switcher"></div>
-                                </td>
-                            </tr>
+                                </div>
+                            </td></tr>
                         </tbody>
                     </table>
                 </div>
