Fix up styling of the options pane a bit

--- a/interfaces/default/templates/index.tmpl
+++ b/interfaces/default/templates/index.tmpl
@@ -79,10 +79,9 @@
                             <tr><td>
                                 <div id="bitrate-container" class="option">
                                     <div id="bitrate-slider"></div>
+                                    Streaming bitrate: <span id="amount">320</span>kbps
                                 </div>
-                                <div class="option">
-                                    <span id="amount">320</span>kbps
-                                </div>
+
                                 <div class="option">
                                     <button id="download-button">Download</button>
                                 </div>
