--- a/interfaces/default/templates/static/css/main.css
+++ b/interfaces/default/templates/static/css/main.css
@@ -66,7 +66,12 @@ body {
 }
 
 #bitrate-container {
-    padding: 0 12px;
+    padding: 0 3px;
+    text-align: center;
+}
+
+#bitrate-slider {
+    margin-bottom: 3px;
 }
 
 #progress {
@@ -238,5 +243,5 @@ tr.artist, tr.album, tr.song, thead > tr {
 }
 
 .option {
-    margin: 3px;
+    margin: 6px 3px 6px 3px;
 }
