--- a/interfaces/default/templates/index.tmpl
+++ b/interfaces/default/templates/index.tmpl
@@ -1,104 +1,184 @@
 <!doctype html>
-<html>
-    <head>
-        <title>Blofeld</title>
-        <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-        <link type="text/css" rel="stylesheet" href="./static/css/main.css">
-        <link type="text/css" rel="stylesheet" href="./static/css/smoothness/jquery-ui-1.8.5.custom.css" />
-        <link type="text/css" rel="stylesheet" href="http://jqueryui.com/themes/base/jquery.ui.all.css" />
-        <script type="text/javascript" src="http://code.jquery.com/jquery-1.4.2.min.js"></script>
-        <script type="text/javascript" src="./static/js/jquery.layout.min-1.2.0.js"></script>
-        <script type="text/javascript" src="./static/js/jquery.jplayer.min.js"></script>
-        <script type="text/javascript" src="./static/js/jquery-ui-1.8.5.custom.min.js"></script>
-        <script type="text/javascript" src="./static/js/jquery.address-1.3.min.js"></script>
-        <script type="text/javascript" src="./static/js/blofeld.js"></script>
-        <script type="text/javascript" src="http://jqueryui.com/themeroller/themeswitchertool/"></script>
-        <link type="image/x-icon" rel="shortcut icon" href="./static/images/favicon.ico">
-    </head>
-    <body class="ui-state-default">
-        <div id="background-color"></div>
-        <div id="splash-background" class="splash-screen"></div>
-        <div id="splash-text" class="splash-screen"></div>
-        <div id="header">
-            <div id="header-widget" class="ui-widget ui-widget-content ui-corner-all">
-                <div id="controls">
-                    <button id="previous-button" >Previous</button>
-                    <button id="play-button">Play</button>
-                    <button id="pause-button">Pause</button>
-                    <button id="next-button">Next</button>
-                    <label for="repeat-button">Repeat</label>
-                    <input id="repeat-button" type="checkbox">
-                    <label for="shuffle-button">Shuffle</label>
-                    <input id="shuffle-button" type="checkbox">
-                </div>
-                <div id="progress">
-                    <div id="progress-bar"></div>
-                    <div id="play-time"><span id="play-time-current">0:00</span><span id="play-time-total">0:00</span></div>
-                </div>
-                <table id="now-playing">
-                    <tbody>
-                        <tr>
-                            <td>
-                                <div id="cover-art">
-                                    <img class="cover-img active" src="" width="32" height="32">
-                                    <img class="cover-img inactive" src="" width="32" height="32">
-                                </div>
-                                </td>
-                            <td id="now-playing-text">
-                                <span id="now-playing-title"></span><br><span class="ui-state-disabled">by</span> <span id="now-playing-artist"></span> <span class="ui-state-disabled">from</span> <span id="now-playing-album"></span>
+<html lang="en" class="no-js">
+<head>
+    <meta charset="utf-8">
+
+    <!-- www.phpied.com/conditional-comments-block-downloads/ -->
+    <!--[if IE]><![endif]-->
+
+    <!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame 
+             Remove this if you use the .htaccess -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
+    <title>Blofeld</title>
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <!--    Mobile Viewport Fix
+                j.mp/mobileviewport & davidbcalhoun.com/2010/viewport-metatag 
+    device-width : Occupy full width of the screen in its current orientation
+    initial-scale = 1.0 retains dimensions instead of zooming out if page height > device height
+    maximum-scale = 1.0 retains dimensions instead of zooming in if page width < device width
+    -->
+    <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
+
+
+    <!-- Place favicon.ico and apple-touch-icon.png in the root of your domain and delete these references -->
+    <link rel="shortcut icon" href="static/images/favicon.ico">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+
+
+    <!-- CSS : implied media="all" -->
+    <link rel="stylesheet" href="static/css/style.css?v=1">
+
+    <!-- For the less-enabled mobile browsers like Opera Mini -->
+    <link rel="stylesheet" media="handheld" href="static/css/handheld.css?v=1">
+
+    <link rel="stylesheet" href="static/css/smoothness/jquery-ui-1.8.5.custom.css" />
+    <link rel="stylesheet" href="http://jqueryui.com/themes/base/jquery.ui.all.css" />
+
+
+    <!-- All JavaScript at the bottom, except for Modernizr which enables HTML5 elements & feature detects -->
+    <script src="static/js/modernizr-1.5.min.js"></script>
+
+
+</head>
+
+<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
+
+<!--[if lt IE 7 ]> <body class="ie6 class="ui-state-default""> <![endif]-->
+<!--[if IE 7 ]>        <body class="ie7 class="ui-state-default""> <![endif]-->
+<!--[if IE 8 ]>        <body class="ie8 class="ui-state-default""> <![endif]-->
+<!--[if IE 9 ]>        <body class="ie9 class="ui-state-default""> <![endif]-->
+<!--[if (gt IE 9)|!(IE)]><!--> <body class="ui-state-default"> <!--<![endif]-->
+
+    <div id="background-color"></div>
+    <div id="splash-background" class="splash-screen"></div>
+    <div id="splash-text" class="splash-screen"></div>
+    <div id="header">
+        <div id="header-widget" class="ui-widget ui-widget-content ui-corner-all">
+            <div id="controls">
+                <button id="previous-button" >Previous</button>
+                <button id="play-button">Play</button>
+                <button id="pause-button">Pause</button>
+                <button id="next-button">Next</button>
+                <label for="repeat-button">Repeat</label>
+                <input id="repeat-button" type="checkbox">
+                <label for="shuffle-button">Shuffle</label>
+                <input id="shuffle-button" type="checkbox">
+            </div>
+            <div id="progress">
+                <div id="progress-bar"></div>
+                <div id="play-time"><span id="play-time-current">0:00</span><span id="play-time-total">0:00</span></div>
+            </div>
+            <table id="now-playing">
+                <tbody>
+                    <tr>
+                        <td>
+                            <div id="cover-art">
+                                <img class="cover-img active" src="" width="32" height="32">
+                                <img class="cover-img inactive" src="" width="32" height="32">
+                            </div>
                             </td>
+                        <td id="now-playing-text">
+                            <span id="now-playing-title"></span><br><span class="ui-state-disabled">by</span> <span id="now-playing-artist"></span> <span class="ui-state-disabled">from</span> <span id="now-playing-album"></span>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+            <div id="spacer"></div>
+            <div id="search" class="ui-widget ui-widget-content ui-state-default ui-corner-all">
+                <form action="javascript:find()" autocomplete="off">
+                    <label for="search-box">
+                        <div id="clear-search" class="ui-icon ui-icon-circle-close"></div>
+                    </label>
+                    <input type="text" id="search-box" class="ui-corner-all">
+                </form>
+            </div>
+        </div>
+    </div>
+    <div id="browser">
+        <div id="artists-container" class="table-container ui-widget ui-widget-content ui-corner-left"></div>
+        <div id="albums-container" class="table-container ui-widget ui-widget-content ui-corner-left"></div>
+    </div>
+    <div id="songs-container" class="table-container ui-widget ui-widget-content ui-corner-left"></div>
+    <div id="sidebar" class="table-container">
+        <div id="sidebar-widget" class="ui-widget ui-widget-content ui-corner-left">
+            <div class="scrolling-container">
+                <table id="options">
+                    <thead class="ui-widget-header">
+                        <tr>
+                            <th class="ui-corner-all">Options</th>
                         </tr>
+                    </thead>
+                    <tbody>
+                        <tr><td>
+                            <div id="bitrate-container" class="option">
+                                <div id="bitrate-slider"></div>
+                                Streaming bitrate: <span id="amount">320</span>kbps
+                            </div>
+
+                            <div class="option">
+                                <button id="download-button">Download</button>
+                            </div>
+                            <div class="option">
+                                <div id="switcher"></div>
+                            </div>
+                        </td></tr>
                     </tbody>
                 </table>
-                <div id="spacer"></div>
-                <div id="search" class="ui-widget ui-widget-content ui-state-default ui-corner-all">
-                    <form action="javascript:find()" autocomplete="off">
-                        <label for="search-box">
-                            <div id="clear-search" class="ui-icon ui-icon-circle-close"></div>
-                        </label>
-                        <input type="text" id="search-box" class="ui-corner-all">
-                    </form>
-                </div>
             </div>
         </div>
-        <div id="browser">
-            <div id="artists-container" class="table-container ui-widget ui-widget-content ui-corner-left"></div>
-            <div id="albums-container" class="table-container ui-widget ui-widget-content ui-corner-left"></div>
-        </div>
-        <div id="songs-container" class="table-container ui-widget ui-widget-content ui-corner-left"></div>
-        <div id="sidebar" class="table-container">
-            <div id="sidebar-widget" class="ui-widget ui-widget-content ui-corner-left">
-                <div class="scrolling-container">
-                    <table id="options">
-                        <thead class="ui-widget-header">
-                            <tr>
-                                <th class="ui-corner-all">Options</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr><td>
-                                <div id="bitrate-container" class="option">
-                                    <div id="bitrate-slider"></div>
-                                    Streaming bitrate: <span id="amount">320</span>kbps
-                                </div>
+    </div>
+    <div id="footer">
+    </div>
+    <div id="jplayer"></div>
+    <div id="cover-art-dialog">
+        <img src="">
+    </div>
 
-                                <div class="option">
-                                    <button id="download-button">Download</button>
-                                </div>
-                                <div class="option">
-                                    <div id="switcher"></div>
-                                </div>
-                            </td></tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
-        <div id="footer">
-        </div>
-        <div id="jplayer"></div>
-        <div id="cover-art-dialog">
-            <img src="">
-        </div>
-    </body>
+
+    <!-- Javascript at the bottom for fast page loading -->
+
+    <!-- Grab Google CDN's jQuery. fall back to local if necessary -->
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+    <script>!window.jQuery && document.write('<script src="static/js/jquery-1.4.2.min.js"><\/script>')</script>
+
+
+    <script src="static/js/plugins.js?v=1"></script>
+    <script src="static/js/jquery.layout.min-1.2.0.js"></script>
+    <script src="static/js/jquery.jplayer.min.js"></script>
+    <script src="static/js/jquery-ui-1.8.5.custom.min.js"></script>
+    <script src="static/js/jquery.address-1.3.min.js"></script>
+    <script src="static/js/script.js?v=1"></script>
+
+    <!-- jQueryUI Theme Switcher -->
+    <script src="http://jqueryui.com/themeroller/themeswitchertool/"></script>
+
+
+    <!--[if lt IE 7 ]>
+        <script src="static/js/dd_belatedpng.js?v=1"></script>
+    <![endif]-->
+
+
+    <!-- yui profiler and profileviewer - remove for production -->
+<!--    <script src="static/js/profiling/yahoo-profiling.min.js?v=1"></script>-->
+<!--    <script src="static/js/profiling/config.js?v=1"></script>-->
+    <!-- end profiling code -->
+
+
+    <!-- asynchronous google analytics: mathiasbynens.be/notes/async-analytics-snippet 
+             change the UA-XXXXX-X to be your site's ID -->
+    <script>
+     var _gaq = [['_setAccount', 'UA-XXXXX-X'], ['_trackPageview']];
+     (function(d, t) {
+        var g = d.createElement(t),
+                s = d.getElementsByTagName(t)[0];
+        g.async = true;
+        g.src = '//www.google-analytics.com/ga.js';
+        s.parentNode.insertBefore(g, s);
+     })(document, 'script');
+    </script>
+
+</body>
 </html>
