Nullify border-collapse property in CSS reset

--- a/interfaces/default/templates/index.tmpl
+++ b/interfaces/default/templates/index.tmpl
@@ -34,8 +34,7 @@
     <!-- For the less-enabled mobile browsers like Opera Mini -->
     <link rel="stylesheet" media="handheld" href="static/css/handheld.css?v=1">
 
-    <link rel="stylesheet" href="static/css/smoothness/jquery-ui-1.8.5.custom.css" />
-    <link rel="stylesheet" href="http://jqueryui.com/themes/base/jquery.ui.all.css" />
+    <link rel="stylesheet" href="static/css/smoothness/jquery-ui-1.8.5.custom.css">
 
 
     <!-- All JavaScript at the bottom, except for Modernizr which enables HTML5 elements & feature detects -->
@@ -76,8 +75,8 @@
                     <tr>
                         <td>
                             <div id="cover-art">
-                                <img class="cover-img active" src="" width="32" height="32">
-                                <img class="cover-img inactive" src="" width="32" height="32">
+                                <img class="cover-img active" width="32" height="32">
+                                <img class="cover-img inactive" width="32" height="32">
                             </div>
                             </td>
                         <td id="now-playing-text">
@@ -143,12 +142,13 @@
     <!-- Grab Google CDN's jQuery. fall back to local if necessary -->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
     <script>!window.jQuery && document.write('<script src="static/js/jquery-1.4.2.min.js"><\/script>')</script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.5/jquery-ui.min.js"></script>
+    <script>!$.button && document.write('<script src="static/js/jquery-ui-1.8.5.custom.min.js"><\/script>')</script>
 
 
     <script src="static/js/plugins.js?v=1"></script>
     <script src="static/js/jquery.layout.min-1.2.0.js"></script>
     <script src="static/js/jquery.jplayer.min.js"></script>
-    <script src="static/js/jquery-ui-1.8.5.custom.min.js"></script>
     <script src="static/js/jquery.address-1.3.min.js"></script>
     <script src="static/js/script.js?v=1"></script>
 
