Hacking on searchbox placement/alignment

--- a/interfaces/default/templates/index.tmpl
+++ b/interfaces/default/templates/index.tmpl
@@ -88,10 +88,10 @@
             <div id="spacer"></div>
             <div id="search" class="ui-widget ui-widget-content ui-state-default ui-corner-all">
                 <form action="javascript:find()" autocomplete="off">
-                    <label for="search-box">
-                        <div id="clear-search" class="ui-icon ui-icon-circle-close"></div>
-                    </label>
-                    <input type="text" id="search-box" class="ui-corner-all">
+                    <div id="search-wrapper">
+                        <input type="text" id="search-box" class="ui-corner-all">
+                        <button id="clear-search">Clear</button>
+                    </div>
                 </form>
             </div>
         </div>
