--- a/interfaces/default/templates/index.tmpl
+++ b/interfaces/default/templates/index.tmpl
@@ -25,7 +25,7 @@
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root of your domain and delete these references -->
     <link rel="shortcut icon" href="static/images/favicon.ico">
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+<!--    <link rel="apple-touch-icon" href="/apple-touch-icon.png">-->
 
 
     <!-- CSS : implied media="all" -->
@@ -75,8 +75,8 @@
                     <tr>
                         <td>
                             <div id="cover-art">
-                                <img class="cover-img active" width="32" height="32">
-                                <img class="cover-img inactive" width="32" height="32">
+                                <img class="cover-img active" src="static/images/blank.png" width="32" height="32">
+                                <img class="cover-img inactive" src="static/images/blank.png" width="32" height="32">
                             </div>
                             </td>
                         <td id="now-playing-text">
@@ -133,7 +133,7 @@
     </div>
     <div id="jplayer"></div>
     <div id="cover-art-dialog">
-        <img src="">
+        <img src="static/images/blank.png">
     </div>
 
 
