--- a/interfaces/default/templates/index.tmpl
+++ b/interfaces/default/templates/index.tmpl
@@ -1,10 +1,12 @@
-<!doctype html>
-<html lang="en" class="no-js">
+<!doctype html>    
+<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ --> 
+<!--[if lt IE 7 ]> <html lang="en" class="no-js ie6"> <![endif]-->
+<!--[if IE 7 ]>        <html lang="en" class="no-js ie7"> <![endif]-->
+<!--[if IE 8 ]>        <html lang="en" class="no-js ie8"> <![endif]-->
+<!--[if IE 9 ]>        <html lang="en" class="no-js ie9"> <![endif]-->
+<!--[if (gt IE 9)|!(IE)]><!--> <html lang="en" class="no-js"> <!--<![endif]-->
 <head>
     <meta charset="utf-8">
-
-    <!-- www.phpied.com/conditional-comments-block-downloads/ -->
-    <!--[if IE]><![endif]-->
 
     <!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame 
              Remove this if you use the .htaccess -->
@@ -14,14 +16,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <!--    Mobile Viewport Fix
-                j.mp/mobileviewport & davidbcalhoun.com/2010/viewport-metatag 
-    device-width : Occupy full width of the screen in its current orientation
-    initial-scale = 1.0 retains dimensions instead of zooming out if page height > device height
-    maximum-scale = 1.0 retains dimensions instead of zooming in if page width < device width
-    -->
-    <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
-
+    <!--    Mobile viewport optimized: j.mp/bplateviewport -->
+    <meta name="viewport" content="width=device-width; initial-scale=1.0">
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root of your domain and delete these references -->
     <link rel="shortcut icon" href="static/images/favicon.ico">
@@ -31,8 +27,8 @@
     <!-- CSS : implied media="all" -->
     <link rel="stylesheet" href="static/css/style.css?v=1">
 
-    <!-- For the less-enabled mobile browsers like Opera Mini -->
-    <link rel="stylesheet" media="handheld" href="static/css/handheld.css?v=1">
+    <!-- Uncomment if you are specifically targeting less enabled mobile browsers
+    <link rel="stylesheet" media="handheld" href="static/css/handheld.css?v=1"> -->
 
     <link rel="stylesheet" href="static/css/smoothness/jquery-ui-1.8.5.custom.css">
 
@@ -43,13 +39,7 @@
 
 </head>
 
-<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
-
-<!--[if lt IE 7 ]> <body class="ie6 class="ui-state-default""> <![endif]-->
-<!--[if IE 7 ]>        <body class="ie7 class="ui-state-default""> <![endif]-->
-<!--[if IE 8 ]>        <body class="ie8 class="ui-state-default""> <![endif]-->
-<!--[if IE 9 ]>        <body class="ie9 class="ui-state-default""> <![endif]-->
-<!--[if (gt IE 9)|!(IE)]><!--> <body class="ui-state-default"> <!--<![endif]-->
+<body class="ui-state-default">
 
     <div id="background-color"></div>
     <div id="splash-background" class="splash-screen"></div>
@@ -140,10 +130,11 @@
     <!-- Javascript at the bottom for fast page loading -->
 
     <!-- Grab Google CDN's jQuery. fall back to local if necessary -->
+    <!-- Grab Google CDN's jQuery. fall back to local if necessary -->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-    <script>!window.jQuery && document.write('<script src="static/js/jquery-1.4.2.min.js"><\/script>')</script>
+    <script>!window.jQuery && document.write(unescape('%3Cscript src="static/js/jquery-1.4.2.min.js"%3E%3C/script%3E'))</script>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.5/jquery-ui.min.js"></script>
-    <script>!$.button && document.write('<script src="static/js/jquery-ui-1.8.5.custom.min.js"><\/script>')</script>
+    <script>!$.button && document.write('%3Cscript src="static/js/jquery-ui-1.8.5.custom.min.js"%3E%3C/script%3E')</script>
 
 
     <script src="static/js/plugins.js?v=1"></script>
@@ -155,14 +146,14 @@
     <!-- jQueryUI Theme Switcher -->
     <script src="http://jqueryui.com/themeroller/themeswitchertool/"></script>
 
-
     <!--[if lt IE 7 ]>
-        <script src="static/js/dd_belatedpng.js?v=1"></script>
+        <script src="js/dd_belatedpng.js"></script>
+        <script> DD_belatedPNG.fix('img, .png_bg'); //fix any <img> or .png_bg background-images </script>
     <![endif]-->
 
 
     <!-- yui profiler and profileviewer - remove for production -->
-<!--    <script src="static/js/profiling/yahoo-profiling.min.js?v=1"></script>-->
+<!--    <script src="static/js/profiling/yahoo-profiling.min.js"></script>-->
 <!--    <script src="static/js/profiling/config.js?v=1"></script>-->
     <!-- end profiling code -->
 
