Maybe a workable search box finally

--- a/interfaces/default/templates/index.tmpl
+++ b/interfaces/default/templates/index.tmpl
@@ -76,12 +76,16 @@
             </table>
             <div id="spacer"></div>
             <div id="search" class="ui-widget ui-widget-content ui-state-default ui-corner-all">
-                <form action="javascript:find()" autocomplete="off">
-                    <div id="search-wrapper">
+                
+                <div id="search-wrapper">
+                    <form action="javascript:find()" autocomplete="off">
+                        <div id="clear-search"></div>
                         <input type="text" id="search-box" class="ui-corner-all">
-                        <button id="clear-search">Clear</button>
-                    </div>
-                </form>
+                        
+                    </form>
+
+                </div>
+                
             </div>
         </div>
     </div>
