--- a/interfaces/default/templates/index.tmpl
+++ b/interfaces/default/templates/index.tmpl
@@ -76,14 +76,11 @@
             </table>
             <div id="spacer"></div>
             <div id="search" class="ui-widget ui-widget-content ui-state-default ui-corner-all">
-                
                 <div id="search-wrapper">
                     <form action="javascript:find()" autocomplete="off">
-                        <div id="clear-search"></div>
-                        <input type="text" id="search-box" class="ui-corner-all">
-                        
+                        <label id="clear-search"></label>
+                        <input type="text" id="search-box" class="ui-widget ui-widget-content ui-corner-tl ui-corner-tr ui-corner-bl ui-corner-br">
                     </form>
-
                 </div>
                 
             </div>
