Stop the stupid autocomplete from eating enter key

--- a/interfaces/default/templates/index.tmpl
+++ b/interfaces/default/templates/index.tmpl
@@ -77,9 +77,9 @@
             <div id="spacer"></div>
             <div id="search" class="ui-widget ui-widget-content ui-state-default ui-corner-all">
                 <div id="search-wrapper">
-                    <form action="javascript:find()" autocomplete="off">
+                    <form action="javascript: find()" autocomplete="off">
                         <label id="clear-search"></label>
-                        <input type="text" id="search-box" class="ui-widget ui-widget-content ui-corner-tl ui-corner-tr ui-corner-bl ui-corner-br">
+                        <input type="text" id="search-box" class="ui-widget ui-widget-content ui-corner-top ui-corner-bottom">
                     </form>
                 </div>
                 
