--- a/interfaces/default/templates/index.tmpl
+++ b/interfaces/default/templates/index.tmpl
@@ -104,7 +104,11 @@
                                 <div id="bitrate-slider"></div>
                                 Streaming bitrate: <span id="amount">320</span>kbps
                             </div>
-
+                            <div class="option">
+                                <input id="html5-audio" type="checkbox">
+                                <label for="html5-audio">Try to use HTML5 audio</label>
+                                <div><em>Currently using <span id="player-type"></span></em></div>
+                            </div>
                             <div class="option">
                                 <button id="download-button">Download</button>
                             </div>
