Make the clear search button an actual button
That way it has a tooltip to indicate to the user what it does...
just in case there was any confusion.

--- a/interfaces/default/templates/index.tmpl
+++ b/interfaces/default/templates/index.tmpl
@@ -77,7 +77,7 @@
             <div id="spacer"></div>
             <div id="search" class="ui-widget ui-widget-content ui-state-default ui-corner-all">
                 <div id="search-wrapper">
-                    <div id="clear-search"></div>
+                    <button id="clear-search">Clear Search</button>
                     <input type="text" id="search-box" class="ui-widget ui-widget-content ui-corner-top ui-corner-bottom">
                 </div>
                 
