--- a/interfaces/default/templates/list_songs.tmpl
+++ b/interfaces/default/templates/list_songs.tmpl
@@ -3,13 +3,13 @@
                         <thead class="ui-widget-header ui-corner-all">
                             <tr class="song">
                                 <th class="status ui-corner-left"></th>
-                                <th class="track-number">#</th>
-                                <th class="title">Title</th>
-                                <th class="artist">Artist</th>
-                                <th class="album">Album</th>
-                                <th class="genre">Genre</th>
-                                <th class="year">Year</th>
-                                <th class="time ui-corner-right">Time</th>
+                                <th class="track-number"><span>#</span><div class="ui-icon sort-status"></div></th>
+                                <th class="title"><span>Title</span><div class="ui-icon sort-status"></div></th>
+                                <th class="artist"><span>Artist</span><div class="ui-icon sort-status"></div></th>
+                                <th class="album"><span>Album</span><div class="ui-icon sort-status"></div></th>
+                                <th class="genre"><span>Genre</span><div class="ui-icon sort-status"></div></th>
+                                <th class="year"><span>Year</span><div class="ui-icon sort-status"></div></th>
+                                <th class="time ui-corner-right"><span>Time</span><div class="ui-icon sort-status"></div></th>
                             </tr>
                         </thead>
                         <tbody>
