Add icons for shortcuts (Prism and Chrome)

--- a/interfaces/default/templates/index.tmpl
+++ b/interfaces/default/templates/index.tmpl
@@ -21,6 +21,8 @@
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root of your domain and delete these references -->
     <link rel="shortcut icon" href="static/images/favicon.ico">
+    <link rel="icon" href="static/images/app-icon-32.png" sizes="32x32"> 
+    <link rel="icon" href="static/images/app-icon-64.png" sizes="64x64"> 
 <!--    <link rel="apple-touch-icon" href="/apple-touch-icon.png">-->
 
 
