--- a/interfaces/default/templates/index.tmpl
+++ b/interfaces/default/templates/index.tmpl
@@ -89,6 +89,11 @@
     <div id="browser">
         <div id="artists-container" class="table-container ui-widget ui-widget-content ui-corner-left"></div>
         <div id="albums-container" class="table-container ui-widget ui-widget-content ui-corner-left"></div>
+        <div id="cover-art-pane" class="ui-widget ui-widget-content">
+            <img class="cover-img active" src="static/images/blank.png" width="100%" height="100%">
+            <img class="cover-img inactive" src="static/images/blank.png" width="100%" height="100%">
+
+        </div>
     </div>
     <div id="songs-container" class="table-container ui-widget ui-widget-content ui-corner-left"></div>
     <div id="sidebar" class="table-container">
