Adds a shutdown button

--- a/interfaces/default/templates/index.tmpl
+++ b/interfaces/default/templates/index.tmpl
@@ -122,6 +122,9 @@
                             <div class="option">
                                 <div id="switcher"></div>
                             </div>
+                            <div class="option">
+                                <button id="shutdown-button">Shutdown</button>
+                            </div>
                         </td></tr>
                     </tbody>
                 </table>
