--- a/interfaces/default/templates/index.tmpl
+++ b/interfaces/default/templates/index.tmpl
@@ -174,7 +174,9 @@
     <div id="cover-art-dialog">
         <img src="static/images/blank.png">
     </div>
-
+    <div id="shutdown-dialog" title="Shutdown">
+        <p>The Blofeld server is shutting down... <span></span></p>
+    </div>
 
     <!-- Javascript at the bottom for fast page loading -->
 
